--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">QR Scanner</string>
+    <string name="clear">clear</string>
+    <string name="content_title">Content:</string>
+    <string name="take_photo">take photo</string>
+    <string name="from_gallery">from gallery</string>
 </resources>
